fix for overflowing image in the featured product and sust.rating display issue [APPDEV-569]
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@18168 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global.css
+++ b/projects/Media/docroot/assets/css/global.css
@@ -1329,7 +1329,7 @@ div.control, div.slotRow, div.time {
 	.ddpp .prodName {
 		font-size: 11px;
 		font-family: Verdana, Arial, sans-serif;
-		height: 46px;
+		height: 33px;
 		overflow-y: hidden;
 	}
 	.ddpp .prodName {
@@ -1386,6 +1386,11 @@ div.control, div.slotRow, div.time {
 	.ddpp .prodImageCont {
 		height: 150px;
 	}
+
+	.ddpp .prodImageCont img {
+		height: 100%;
+	}
+
 	.ddpp .ddpp_normal_prod_list_imgCont {
 	}
 
@@ -1396,7 +1401,7 @@ div.control, div.slotRow, div.time {
 		height: auto;
 	}
 	.ddpp .prodRating {
-		height: 12px;
+		height: 25px;
 	}
 	
 	.ddpp .socialMedia {
